--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://nataliesmyth.com">Natalie Smyth</a>.
     </div>
   </footer>
 </body>
