--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     <div class="container">
       <form class="form">
         <label class="label" for="bill">Bill</label>
-        <img src="./images/icon-dollar.svg" alt="">
         <input type="text" min="1" step="any" placeholder="" class="input" id="billInput">
         <label class="label" for="selectTip">Select Tip %</label>
         <button type="button" class="tip-percentage tip-percentage-btn" data-percent="5">5%</button>
@@ -38,7 +37,7 @@
         <button type="button" class="tip-percentage tip-percentage-btn" data-percent="50">50%</button>
         <input type="text" class="tip-percentage input" id="custom-tip" placeholder="Custom">
         <label class="label" for="numberOfPeople">Number of People</label>
-        <input type="number" min="1" step="any" class="input" id="inputNumberOfPeople">
+        <input type="number" min="0" step="any" class="input" id="peopleInput">
       </form>
         
       <div class="result">
