removed invalid step attribute from bill input

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container">
       <form class="form">
         <label class="label" for="bill">Bill</label>
-        <input type="text" step="any" placeholder="0" class="input" id="billInput">
+        <input type="text" placeholder="0" class="input" id="billInput">
         <label class="label" for="selectTip">Select Tip %</label>
         <button type="button" class="tip-percentage tip-percentage-btn" data-percent="5">5%</button>
         <button type="button" class="tip-percentage tip-percentage-btn" data-percent="10">10%</button>
