fixed label for to match input id

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="logo"><img src="./images/logo.svg" alt="splitter in all caps on light blue background"></div>
     <div class="container">
       <form class="form">
-        <label class="label" for="bill">Bill</label>
+        <label class="label" for="billInput">Bill</label>
         <input type="text" placeholder="0" class="input" id="billInput">
         <label class="label" for="selectTip">Select Tip %</label>
         <button type="button" class="tip-percentage tip-percentage-btn" data-percent="5">5%</button>
