--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <input type="text" class="tip-percentage input" id="custom-tip" placeholder="Custom">
         <div class="num-people-labels">
           <label class="label" for="numberOfPeople">Number of People</label>
-          <label class="error" id="error">Can't be zero</label>
+          <label class="error" id="error numberOfPeople">Can't be zero</label>
         </div>
         <input type="number" min="0" step="any" class="input" id="peopleInput" placeholder="0">
       </form>
