removed for attribute with no attached id

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <form class="form">
         <label class="label" for="billInput">Bill</label>
         <input type="text" placeholder="0" class="input" id="billInput">
-        <label class="label" for="selectTip">Select Tip %</label>
+        <label class="label">Select Tip %</label>
         <button type="button" class="tip-percentage tip-percentage-btn" data-percent="5">5%</button>
         <button type="button" class="tip-percentage tip-percentage-btn" data-percent="10">10%</button>
         <button type="button" class="tip-percentage tip-percentage-btn" data-percent="15">15%</button>
